# practical-programming-in-chemistry-exercises

./: README.md
environment/: env.yml
week_06/: 06_exercises.ipynb  06_solutions.ipynb  README.md
week_07/: 07_drfp_test.ipynb  README.md
week_07/exercise_01/: 07_drfp_partA.ipynb  07_drfp_partB.ipynb
week_07/exercise_02/: 07_from_script_to_package.ipynb
week_07/exercise_02/amremover_package/: pyproject.toml
week_07/exercise_02/amremover_package/src/amremover_package/: amremover_module.py
week_07/exercise_02/amremover_package_solution/: pyproject.toml
week_07/exercise_02/amremover_package_solution/src/amremover_package/: amremover_module.py
week_07/exercise_02/amremover_package_solution_with_cli/: pyproject.toml
week_07/exercise_02/amremover_package_solution_with_cli/src/amremover_package/: cli.py
week_08/: 08_exercise.ipynb  08_solution.ipynb  README.md
week_09/: README.md
week_09/Part-1/: README.md  solution_code.ipynb
week_09/Part-2/: README.md
week_10/: 10_exercise.ipynb  10_solutions.ipynb  README.md
week_11/: 11_exercises.ipynb  README.md  app.py  solutions_app.py
