[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amremover_package" # name of the installed package
version = "0.0.1" # version is required
dependencies = [ # specify the required package dependencies
    "rdkit",
    "typer",
]

# https://hatch.pypa.io/1.9/config/metadata/#cli
[project.scripts]
amremover = "amremover_package.cli:run"

# only required if name above is different from the folder name
# [tool.hatch.build.targets.wheel] 
# packages = ["src/amremover_package"]